@@ -13,6 +13,7 @@ import java.util.stream.Collectors;
 public class ConnectionService {
     @Autowired private ConnectionRepository connectionRepository;
     @Autowired private ProfileRepository profileRepository;
+    @Autowired private UserRepository userRepository;
     @Autowired private QueueRepository queueRepository;
     @Autowired private AnalyticsRepository analyticsRepository;
 
@@ -57,8 +58,17 @@ public class ConnectionService {
     }
 
     // Finds the shortest path (up to 7 degrees) between two users
-    public List<String> findConnectionPath(String startUserId, String targetUserId) {
-        if (startUserId.equals(targetUserId)) return Collections.singletonList(startUserId);
+    public List<Map<String, String>> findConnectionPath(String fromProfileId, String toProfileId) {
+        // 1. Resolve Profile IDs to User IDs
+        User startUser = userRepository.findByProfileId(fromProfileId).orElse(null);
+        User targetUser = userRepository.findByProfileId(toProfileId).orElse(null);
+
+        if (startUser == null || targetUser == null) return Collections.emptyList();
+
+        String startUserId = startUser.getId();
+        String targetUserId = targetUser.getId();
+
+        if (startUserId.equals(targetUserId)) return Collections.emptyList();
 
         LinkedList<String> queue = new LinkedList<>();
         Map<String, String> predecessors = new HashMap<>();
@@ -68,7 +78,8 @@ public class ConnectionService {
         visited.add(startUserId);
 
         int depth = 0;
-        while (!queue.isEmpty() && depth < 7) {
+        boolean found = false;
+        while (!queue.isEmpty() && depth < 10) {
             int levelSize = queue.size();
             for (int i = 0; i < levelSize; i++) {
                 String current = queue.poll();
@@ -82,15 +93,33 @@ public class ConnectionService {
                         predecessors.put(neighbor, current);
 
                         if (neighbor.equals(targetUserId)) {
-                            return reconstructPath(predecessors, targetUserId);
+                            found = true;
+                            break;
                         }
                         queue.add(neighbor);
                     }
                 }
+                if (found) break;
             }
+            if (found) break;
             depth++;
         }
-        return Collections.emptyList(); // No path found within 7 degrees
+        if (!found) return Collections.emptyList();
+
+        // 3. Reconstruct Path and attach Profile Names
+        List<String> userPath = reconstructPath(predecessors, targetUserId);
+        List<Map<String, String>> result = new ArrayList<>();
+
+        for (String uid : userPath) {
+            User u = userRepository.findById(uid).orElse(null);
+            Profile p = (u != null) ? profileRepository.findById(u.getProfileId()).orElse(null) : null;
+
+            Map<String, String> node = new HashMap<>();
+            node.put("id", uid);
+            node.put("name", p != null ? p.getFirstName() + " " + p.getLastName() : "Unknown");
+            result.add(node);
+        }
+        return result;
     }
 
     private List<String> getAcceptedNeighbors(String userId) {
@@ -112,23 +141,43 @@ public class ConnectionService {
         // 1. Get all accepted professional connections
         List<Connection> connections = connectionRepository.findAll().stream()
                 .filter(c -> "ACCEPTED".equals(c.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
 
         // 2. Extract unique user IDs involved in these connections
         Set<String> userIds = new HashSet<>();
         connections.forEach(c -> userIds.addAll(c.getUsers()));
 
-        // 3. Fetch profiles to create labeled nodes
-        List<Profile> profiles = profileRepository.findAllById(userIds);
-        List<GraphDataResponse.Node> nodes = profiles.stream()
-                .map(p -> new GraphDataResponse.Node(
-                        p.getId(),
-                        p.getFirstName() + " " + p.getLastName(),
-                        p.getProfession()))
-                .collect(Collectors.toList());
+        // 3. Fetch User objects to get their linked Profile IDs
+        List<User> users = userRepository.findAllById(userIds);
 
-        // 4. Create links based on the connection records
+        // Create a map of User ID -> Profile ID for easy lookup
+        Map<String, String> userToProfileMap = users.stream()
+                .collect(Collectors.toMap(User::getId, User::getProfileId));
+
+        // 4. Fetch the Profiles using the mapped IDs
+        List<Profile> profiles = profileRepository.findAllById(userToProfileMap.values());
+        Map<String, Profile> profileMap = profiles.stream()
+                .collect(Collectors.toMap(Profile::getId, p -> p));
+
+        // 5. Build the Nodes using User IDs (to match link references)
+        List<GraphDataResponse.Node> nodes = new ArrayList<>();
+        for (User user : users) {
+            Profile profile = profileMap.get(user.getProfileId());
+            if (profile != null) {
+                nodes.add(new GraphDataResponse.Node(
+                        user.getId(),
+                        profile.getFirstName() + " " + profile.getLastName(),
+                        profile.getProfession()));
+            }
+        }
+
+        // 6. Build and FILTER Links
+        // Only include links where BOTH nodes exist in our final nodes list
+        Set<String> validNodeIds = nodes.stream().map(n -> n.getId()).collect(Collectors.toSet());
+
         List<GraphDataResponse.Link> links = connections.stream()
+                .filter(c -> validNodeIds.contains(c.getUsers().get(0)) &&
+                             validNodeIds.contains(c.getUsers().get(1)))
                 .map(c -> new GraphDataResponse.Link(
                         c.getUsers().get(0),
                         c.getUsers().get(1),
